# src/typescript/coreapis-sdk/models/index.ts
@@ -13,6 +13,9 @@ export * from './detection-photo-payload';
 export * from './detection-type';
 export * from './detection-type-create-payload';
 export * from './detection-type-update-payload';
+export * from './multi-detection-create-response';
+export * from './multi-detection-entry-payload';
+export * from './multi-detection-mutation-payload';
 export * from './error-response';
 export * from './feedback';
 export * from './feedback-category-enum';
