# src/typescript/coreapis-sdk/models/multi-detection-create-response.ts
@@ -1,0 +1,35 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * FastAPI
+ * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
+ *
+ * OpenAPI spec version: 0.1.0
+ * 
+ *
+ * NOTE: This class is auto generated by the swagger code generator program.
+ * https://github.com/swagger-api/swagger-codegen.git
+ * Do not edit the class manually.
+ */
+
+import { Detection } from './detection';
+ /**
+ * 
+ *
+ * @export
+ * @interface MultiDetectionCreateResponse
+ */
+export interface MultiDetectionCreateResponse {
+
+    /**
+     * @type {string}
+     * @memberof MultiDetectionCreateResponse
+     */
+    sessionId: string;
+
+    /**
+     * @type {Array<Detection>}
+     * @memberof MultiDetectionCreateResponse
+     */
+    detections: Array<Detection>;
+}
